AKS/app/backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usercenter
  labels:
    tier: backend
    app: usercenter
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: henry071190/usercenter
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe
  labels:
    tier: backend
    app: recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: recipe
        image: henry071190/recipe
        ports:
        - containerPort: 8081
