AKS/app/dbs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usercenter-db
  labels:
    tier: backend
    app: usercenter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usercenter-db
  template:
    metadata:
      labels:
        app: usercenter-db
    spec:
      containers:
      - name: usercenter-db
        image: henry071190/usercenter-db
        ports:
        - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-db
  labels:
    tier: backend
    app: recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-db
  template:
    metadata:
      labels:
        app: recipe-db
    spec:
      containers:
      - name: recipe-db
        image: henry071190/recipe-db
        ports:
        - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-db
  labels:
    tier: backend
    app: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-db
  template:
    metadata:
      labels:
        app: shopping-db
    spec:
      containers:
      - name: shopping-db
        image: henry071190/shopping-db
        ports:
        - containerPort: 3306
