AKS/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: usercenter-db-svc
spec:
  selector:
    app: usercenter-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-db-svc
spec:
  selector:
    app: recipe-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: usercenter-svc
spec:
  selector:
    app: usercenter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-svc
spec:
  selector:
    app: recipe
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    tier: frontend
  type: LoadBalancer
